feat: add footer layout & styles

--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -1,6 +1,8 @@
 @import './blocks/page';
 @import './blocks/container';
 @import './blocks/icons';
+@import './blocks/main';
+@import './blocks/section-title';
 @import './blocks/header';
 @import './blocks/logo';
 @import './blocks/menu';
@@ -8,9 +10,10 @@
 @import './blocks/schedule';
 @import './blocks/actual-events';
 @import './blocks/event';
-@import './blocks/section-title';
-@import './blocks/main';
 @import './blocks/gallery';
 @import './blocks/swiper';
 @import './blocks/subscription';
 @import './blocks/form';
+@import './blocks/footer';
+@import './blocks/footer-nav';
+@import './blocks/contacts';
