--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -24,4 +24,12 @@
       width: 15px;
     }
   }
+
+  &--facebook {
+    background-image: url(../images/icons/facebook.svg);
+  }
+
+  &--instagram {
+    background-image: url(../images/icons/instagram.svg);
+  }
 }
