--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -9,4 +9,9 @@
   justify-content: center;
   text-decoration: none;
   color: inherit;
+
+  &--footer {
+    font-size: 36px;
+    align-items: start;
+  }
 }
