--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -30,8 +30,16 @@
     line-height: 150%;
   }
 
-  &__strong {
+  &__bold {
     font-weight: 600;
+
+    &--footer {
+      font-weight: 400;
+
+      @include on-tablet {
+        font-weight: 600;
+      }
+    }
   }
 
   &__notes {
@@ -44,9 +52,22 @@
       align-self: flex-end;
     }
 
-    @include on-tablet {
+    @include on-desktop {
       width: 170px;
       margin-right: 100px;
+    }
+
+    &--wide {
+      @include on-tablet {
+        width: 210px;
+        height: 100%;
+        align-self: flex-start;
+        margin-right: 0;
+      }
+
+      @include on-tablet {
+        width: 100%;
+      }
     }
   }
 }
