--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -100,13 +100,13 @@
     @include onTablet {
       font-size: 54px;
       line-height: 120%;
-      margin: 128px 0 38px 0;
+      margin: 128px 0 38px;
       text-align: start;
     }
 
     @include onDesktop {
       font-size: 72px;
-      margin: 206px 0 90px 0;
+      margin: 206px 0 90px;
       text-align: start;
     }
   }
