--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -9,8 +9,12 @@
     background-size: contain;
   }
 
-  &--arrow {
-    background-image: url(../images/icons/icon-arrow.png);
+  &--arrow-white {
+    background-image: url(../images/icons/arrow-white.png);
+  }
+
+  &--arrow-black {
+    background-image: url(../images/icons/arrow-black.png);
   }
 
   &--close {
