--- a/src/styles/blocks/my-swiper.scss
+++ b/src/styles/blocks/my-swiper.scss
@@ -1,6 +1,6 @@
-@import 'swiper/swiper.scss';
-@import 'swiper/modules/navigation.scss';
-@import 'swiper/modules/pagination.scss';
+@import 'swiper/swiper';
+@import 'swiper/modules/navigation';
+@import 'swiper/modules/pagination';
 
 .my-swiper {
   // display: none !important;
