--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -47,12 +47,13 @@
   column-gap: 20px;
   grid-template-columns: repeat(var(--column), 1fr);
 
-  @include onTablet() {
+  @include onTablet {
     --column: 6;
   }
 
-  @include onDesktop() {
+  @include onDesktop {
     --column: 12;
+
     column-gap: 30px;
   }
 }
