--- a/src/styles/blocks/signature.scss
+++ b/src/styles/blocks/signature.scss
@@ -32,7 +32,7 @@
   }
 
   &__title {
-    font-family: Montserrat;
+    font-family: 'Montserrat';
     font-weight: 400;
     font-size: 28px;
     line-height: 100%;
