--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,4 +1,5 @@
 .subscribe {
+  // display: none !important;
   background-image: url(/src/images/subscribe.png);
   background-size: cover;
   background-position: center;
@@ -54,6 +55,61 @@
 
     @include onTablet {
       line-height: 100%;
+    }
+  }
+
+  &__form {
+    grid-column: span 2;
+    height: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    @include onTablet {
+      grid-column: 2/6;
+      gap: 16px;
+      height: 70px;
+    }
+
+    @include onDesktop {
+      grid-column: 4/10;
+      gap: 30px;
+    }
+  }
+
+  &__input {
+    box-sizing: border-box;
+    height: 100%;
+    width: calc(100% - 50px);
+    outline: none;
+    padding-left: 24px;
+
+    @include onTablet {
+      width: calc(100% - 70px);
+    }
+
+    @include onDesktop {
+      padding-left: 32px;
+    }
+
+    &::placeholder {
+      font-family: Montserrat;
+      font-size: 14px;
+      line-height: 100%;
+      color: rgba(104, 116, 128, 1);
+    }
+  }
+
+  &__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(241, 74, 39, 1);
+    height: 100%;
+    width: 50px;
+
+    @include onTablet {
+      width: 70px;
     }
   }
 }
