add task solution

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -94,7 +94,7 @@
     margin-top: 40px;
 
     @include onDesktop {
-      width: 170px;
+      width: 172px;
     }
   }
 
@@ -109,6 +109,8 @@
     a {
       text-decoration: none;
       color: $main-titles-color;
+
+      @include hover(font-weight, 550);
     }
   }
 
@@ -192,6 +194,10 @@
   &__block {
     display: flex;
     flex-direction: column;
+
+    a {
+      @include hover(font-weight, 550);
+    }
   }
 
   &__link {
@@ -210,6 +216,7 @@
     @include onTablet {
       width: 220px;
     }
+
   }
 
   &__info {
