--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -73,11 +73,14 @@
         font-size: 22px;
         line-height: 100%;
        }
+
+      @include hover(transform, scale(1.1));
     }
 
     a:nth-child(2) {
       margin-top: 20px;
     }
+
   }
 
   &__list {
