add task solution

--- a/src/styles/blocks/follow.scss
+++ b/src/styles/blocks/follow.scss
@@ -60,6 +60,7 @@
     height: 100%;
     padding-left: 24px;
 
+
     @include onTablet {
       width: 374px;
     }
@@ -67,6 +68,12 @@
     @include onDesktop {
       width: 470px;
     }
+
+    &:focus,
+    &:active {
+    outline: none;
+    outline: 1px solid $main-element-color;
+  }
   }
 
   &__input::placeholder {
