--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -149,7 +149,7 @@
     position: absolute;
     height: 300px;
     width: 100%;
-    background-image: url('../images/header-bg.png');
+    background-image: url('../images/header-bg.webp');
     background-size: cover;
     background-position: center;
     top: 0;
