--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -35,27 +35,27 @@
 
     &--1 {
       grid-column: 1 / 4;
-      background-image: url('../images/gallery/ukrainian-woman.png');
+      background-image: url('../images/gallery/ukrainian-woman.webp');
     }
 
     &--2 {
       grid-column: 4 / -1;
-      background-image: url('../images/gallery/goose.png');
+      background-image: url('../images/gallery/goose.webp');
 
       @include on-desktop {
-        background-image: url('../images/gallery/winter-village.png');
+        background-image: url('../images/gallery/winter-village.webp');
       }
     }
 
     &--3 {
       grid-column: 1 / 10;
-      background-image: url('../images/gallery/park.png');
+      background-image: url('../images/gallery/park.webp');
       background-position: 70%;
     }
 
     &--4 {
       grid-column: 10 / -1;
-      background-image: url('../images/gallery/sunset-sea.png');
+      background-image: url('../images/gallery/sunset-sea.webp');
     }
 
     @include on-tablet {
