feat: add hover styles & variables

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -17,5 +17,10 @@
   &__link {
     text-decoration: none;
     color: inherit;
+
+    @include on-hover(color, $color-brand-main);
+    @include on-hover(font-size, 14.2px);
+
+    transition: all $effect-duration;
   }
 }
