--- a/src/styles/blocks/footer-nav.scss
+++ b/src/styles/blocks/footer-nav.scss
@@ -13,6 +13,11 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 100%;
-    color: #0f0e08;
+    color: $color-text-main;
+
+    @include on-image-hover;
+    @include on-hover(color, $color-brand-main);
+
+    transition: all $effect-duration;
   }
 }
