--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -66,7 +66,7 @@
 
   &__schedule {
     grid-column: span 1;
-    color: #0f0e08;
+    color: $color-text-main;
     display: flex;
     flex-direction: column;
     padding-bottom: 30px;
