--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -1,4 +1,6 @@
 .icon {
+  @include on-image-hover;
+
   display: block;
   height: 24px;
   width: 24px;
@@ -17,7 +19,7 @@
     content: '';
     height: 10px;
     width: 10px;
-    background-color: #f14a27;
+    background-color: $color-background-main;
 
     @include on-tablet {
       height: 15px;
