--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -1,5 +1,8 @@
 .logo {
-  @extend %logo-font;
+  font-family: Montserrat, sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 100%;
 
   width: 55px;
   height: 61px;
@@ -9,6 +12,12 @@
   justify-content: center;
   text-decoration: none;
   color: inherit;
+
+  @include on-image-hover;
+
+  @include on-tablet {
+    font-size: 36px;
+  }
 
   &--footer {
     font-size: 36px;
