--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,4 +1,8 @@
-$color-gray: #eee;
+$color-white: #fff;
+$color-text-main: #0f0e08;
+$color-text-secondary: #687480;
+$color-brand-main: #1a5a4c;
+$color-background-main: #f14a27;
 $effect-duration: 0.3s;
 $mobile-max-width: 320px;
 $tablet-min-width: 768px;
