--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -32,7 +32,9 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
-    color: #fff;
+    color: $color-white;
+
+    @include on-image-hover;
 
     @include on-desktop {
       font-size: 22px;
