--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  color: #fff;
+  color: $color-white;
   font-weight: 400;
 
   @include on-tablet {
