--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,7 @@ body {
   padding: 0;
   font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 300;
-  color: #0f0e08;
+  color: $color-text-main;
 }
 
 input,
