feat: add menu background

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,5 +1,10 @@
 .menu {
-  background-color: $color-brand-main;
+  height: 100vh;
+  background-color: rgba(32, 32, 32, 0.7);
+
+  &__wrapper {
+    background-color: $color-brand-main;
+  }
 
   &__content {
     display: flex;
