feat: add footer arrow up

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -26,6 +26,8 @@
   &__top {
     @include page-grid;
 
+    position: relative;
+
     row-gap: 40px;
 
     @include on-tablet {
@@ -132,6 +134,27 @@
       @include on-desktop {
         grid-column: 10 / 12;
       }
+    }
+  }
+
+  &__arrow-up {
+    position: absolute;
+    bottom: 110px;
+    right: 0;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: 1px solid $color-brand-main;
+
+    background-image: url('../images/icons/arrow-up.svg');
+    background-repeat: no-repeat;
+    background-size: 16px;
+    background-position: center;
+
+    @include on-hover(border-color, $color-background-main);
+
+    @include on-tablet {
+      display: none;
     }
   }
 
