corrected the mentor's remark

--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -23,6 +23,10 @@
     @include on-tablet {
       margin-bottom: 40px;
     }
+
+    //@include on-small-desktop {
+    //  margin-inline: -55px;
+    //}
   }
 
   &__img {
