--- a/src/styles/blocks/from-classicism-to-romanticism.scss
+++ b/src/styles/blocks/from-classicism-to-romanticism.scss
@@ -1,6 +1,13 @@
 .from-classicism-to-romanticism {
-  width: 100%;
+  //width: 100%;
   margin-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+
+  @include on-small-desktop {
+    margin-inline: -55px;
+  }
 
   .event__img-box {
     @media (max-width: 640px) {
@@ -52,8 +59,4 @@
   .event__name {
     margin: 0;
   }
-}
-
-#from-classicism-to-romanticism {
-  gap: 0;
 }
