--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -9,10 +9,12 @@
 
   @include on-tablet {
     padding: 82px 154px;
+    margin-inline: -$tablet-padding-inline;
   }
 
   @include on-small-desktop {
     padding: 163px 355px;
+    margin-inline: -$small-desktop-padding-inline;
   }
 
   &__wrapper {
