--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -383,17 +383,51 @@ h1 {
   list-style: none;
 }
 
-.event--exhibition {
+.exhibition {
   margin-bottom: 60px;
 }
 @media (min-width: 640px) {
-  .event--exhibition {
+  .exhibition {
     margin-bottom: 112px;
   }
 }
 @media (min-width: 1280px) {
-  .event--exhibition {
+  .exhibition {
     margin-bottom: 104px;
+  }
+}
+@media (min-width: 1280px) {
+  .exhibition .event__wrapper.go-and-come-back,
+  .exhibition .event__wrapper.memories-and-dreams {
+    gap: 12%;
+  }
+  .exhibition .event__wrapper.go-and-come-back .event__content,
+  .exhibition .event__wrapper.memories-and-dreams .event__content {
+    width: 32%;
+  }
+  .exhibition .event__wrapper.go-and-come-back .event__header,
+  .exhibition .event__wrapper.memories-and-dreams .event__header {
+    width: 100%;
+  }
+  .exhibition .event__wrapper.go-and-come-back .event__title,
+  .exhibition .event__wrapper.memories-and-dreams .event__title {
+    font-size: clamp(0.9em, 1.2vw, 1.7em);
+    line-height: 150%;
+  }
+  .exhibition .event__wrapper.go-and-come-back .event__dates,
+  .exhibition .event__wrapper.memories-and-dreams .event__dates {
+    font-size: clamp(0.9em, 1.2vw, 1.7em);
+    line-height: 150%;
+  }
+  .exhibition .event__wrapper.go-and-come-back .event__name,
+  .exhibition .event__wrapper.memories-and-dreams .event__name {
+    font-size: clamp(2.4em, 2.4vw, 3.7em);
+    line-height: 150%;
+  }
+  .exhibition .event__wrapper.go-and-come-back .event__description,
+  .exhibition .event__wrapper.memories-and-dreams .event__description {
+    font-size: clamp(0.1em, 1.4vw, 1.7em);
+    line-height: 150%;
   }
 }
 
@@ -426,8 +460,15 @@ h1 {
 }
 
 .from-classicism-to-romanticism {
-  width: 100%;
   margin-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+}
+@media (min-width: 1280px) {
+  .from-classicism-to-romanticism {
+    margin-inline: -55px;
+  }
 }
 @media (max-width: 640px) {
   .from-classicism-to-romanticism .event__img-box {
@@ -478,10 +519,6 @@ h1 {
 }
 .from-classicism-to-romanticism .event__name {
   margin: 0;
-}
-
-#from-classicism-to-romanticism {
-  gap: 0;
 }
 
 .event {
@@ -751,11 +788,13 @@ h1 {
 @media (min-width: 640px) {
   .subscription {
     padding: 82px 154px;
+    margin-inline: -34px;
   }
 }
 @media (min-width: 1280px) {
   .subscription {
     padding: 163px 355px;
+    margin-inline: -55px;
   }
 }
 .subscription__wrapper .subscription__title {
@@ -863,17 +902,51 @@ h1 {
   }
 }
 
-.event--exhibition {
+.exhibition {
   margin-bottom: 60px;
 }
 @media (min-width: 640px) {
-  .event--exhibition {
+  .exhibition {
     margin-bottom: 112px;
   }
 }
 @media (min-width: 1280px) {
-  .event--exhibition {
+  .exhibition {
     margin-bottom: 104px;
+  }
+}
+@media (min-width: 1280px) {
+  .exhibition .event__wrapper.go-and-come-back,
+  .exhibition .event__wrapper.memories-and-dreams {
+    gap: 12%;
+  }
+  .exhibition .event__wrapper.go-and-come-back .event__content,
+  .exhibition .event__wrapper.memories-and-dreams .event__content {
+    width: 32%;
+  }
+  .exhibition .event__wrapper.go-and-come-back .event__header,
+  .exhibition .event__wrapper.memories-and-dreams .event__header {
+    width: 100%;
+  }
+  .exhibition .event__wrapper.go-and-come-back .event__title,
+  .exhibition .event__wrapper.memories-and-dreams .event__title {
+    font-size: clamp(0.9em, 1.2vw, 1.7em);
+    line-height: 150%;
+  }
+  .exhibition .event__wrapper.go-and-come-back .event__dates,
+  .exhibition .event__wrapper.memories-and-dreams .event__dates {
+    font-size: clamp(0.9em, 1.2vw, 1.7em);
+    line-height: 150%;
+  }
+  .exhibition .event__wrapper.go-and-come-back .event__name,
+  .exhibition .event__wrapper.memories-and-dreams .event__name {
+    font-size: clamp(2.4em, 2.4vw, 3.7em);
+    line-height: 150%;
+  }
+  .exhibition .event__wrapper.go-and-come-back .event__description,
+  .exhibition .event__wrapper.memories-and-dreams .event__description {
+    font-size: clamp(0.1em, 1.4vw, 1.7em);
+    line-height: 150%;
   }
 }
 
