add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,13 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './blocks/container';
+@import './blocks/page';
+@import './blocks/menu';
+@import './blocks/header';
+@import './blocks/section-title';
+@import './blocks/current-events';
+@import './blocks/gallery';
+@import './blocks/swiper';
+@import './blocks/subscription';
+@import './blocks/footer';
