--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,17 +1,21 @@
 .main {
-  &__content {
-    @include padding-inline;
 
+  &__content {
     display: flex;
     flex-direction: column;
     gap: 100px;
+    padding-top: 70px;
+    padding-bottom: 18px;
 
     @include on-tablet {
       gap: 88px;
+      padding-top: 88px;
+      padding-bottom: 0;
     }
 
     @include on-desktop {
       gap: 200px;
+      padding-top: 200px;
     }
   }
 }
