--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -2,19 +2,20 @@
   background-color: $menu-color;
 
   &__content {
-    @include padding-inline;
-
     padding-block: 27px;
+    display: flex;
+    flex-direction: column;
+    gap: 49px;
 
     @include on-tablet {
       padding-block: 40px;
-      display: flex;
+      flex-direction: row;
       gap: 77px;
     }
 
     @include on-desktop {
-      gap: 205px;
       padding-bottom: 48px;
+      gap: 205px;
     }
   }
 
@@ -58,47 +59,6 @@
 
     @include on-desktop {
       gap: 102px;
-    }
-  }
-
-  &__list-description {
-    margin-top: 49px;
-    color: $page-color;
-    font-weight: 400;
-
-    @include on-tablet {
-      margin-top: 0;
-    }
-  }
-
-  &__list {
-    margin-top: 20px;
-  }
-
-  &__text {
-    font-weight: 400;
-    color: $page-color;
-    margin-top: 16px;
-    font-size: 14px;
-    line-height: 21px;
-
-    &-span {
-      @include bold-text;
-    }
-
-    @include on-tablet {
-      width: 40%;
-    }
-  }
-
-  &__center-lists {
-    @include on-tablet {
-      display: flex;
-      gap: 26px;
-    }
-
-    @include on-desktop {
-      gap: 30px;
     }
   }
 }
