--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -4,18 +4,16 @@
 
 .page {
   background-color: $page-color;
+  color: rgba(78, 78, 78, 1);
   font-size: 16px;
   line-height: 24px;
   font-weight: 500;
   font-family: 'IBM Plex Sans', serif;
   scroll-behavior: smooth;
 
-  &__body {
-    height: 100vh;
-  }
-
   &__header {
     position: relative;
+    margin-inline: auto;
   }
 
   &__menu {
@@ -44,7 +42,8 @@
   &:has(.page__menu:target) .article__photo,
   &:has(.page__menu:target) .section__title,
   &:has(.page__menu:target) .header__title,
-  &:has(.page__menu:target) .header__box {
+  &:has(.page__menu:target) .header__button,
+  &:has(.page__menu:target) .header__events{
     filter: opacity(0.2);
   }
 
