--- a/src/styles/swiper.scss
+++ b/src/styles/swiper.scss
@@ -30,6 +30,7 @@
   &__image {
     display: block;
     object-fit: cover;
+    object-position: left;
 
     &--mobile {
       width: 280px;
@@ -41,12 +42,12 @@
       height: 543px;
     }
 
-    &--last {
+    &--positioned-left{
       object-position: left;
     }
   }
 
-  &__pagination {
+  &-pagination {
     bottom: -5px !important;
 
     &-bullet {
