--- a/src/styles/top-bar.scss
+++ b/src/styles/top-bar.scss
@@ -5,21 +5,11 @@
   padding-block: 9px;
 
   @include on-tablet {
-    gap: 390px;
+    gap: 60%;
     padding-block: 15px;
   }
 
   @include on-desktop {
-    gap: 490px;
-  }
-
-  &__photo {
-    height: 61px;
-    width: 55px;
-
-    &--footer {
-      width: 63px;
-      height: 72px;
-    }
+    gap: 45%;
   }
 }
