--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,39 +1,46 @@
 .header {
-  &__content {
-    @include padding-inline;
-    @include page-grid;
 
-    padding-bottom: 70px;
+  &__background{
+    background-image: url(/src/images/header-background.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 300px;
+    width: 100%;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+
+    @include on-tablet{
+      right: 0;
+      height: 384px;
+      width: 48%;
+    }
+
+    @include on-desktop{
+      width: 55%;
+      max-width: 1000px;
+      height: 655px;
+    }
+  }
+
+  &__content {
     position: relative;
 
+    @include page-grid;
+
     @include on-tablet {
-      padding-bottom: 107px;
+      padding-bottom: 51px;
     }
 
     @include on-desktop {
-      padding-bottom: 318px;
-
-      &::after {
-        display: block;
-        position: absolute;
-        content: 'Події';
-        writing-mode: vertical-rl;
-        transform: rotate(180deg);
-        left: 55px;
-        top: 522px;
-        color: $article-type;
-        font-size: 14px;
-        line-height: 14px;
-      }
+      padding-bottom: 155px;
     }
   }
 
-  &__top {
-    grid-column: 1/-1;
-  }
-
   &__top-bar {
-    margin-bottom: 241px;
+    grid-column: 1/-1;
+    margin-bottom: 250px;
 
     @include on-tablet {
       margin-bottom: 25px;
@@ -45,99 +52,60 @@
   }
 
   &__title {
-    font-weight: 700;
+    grid-column: 1/-1;
     font-size: 45px;
-    line-height: 45px;
-    text-transform: uppercase;
-    text-align: center;
-    color: $main-dark;
-    font-family: Montserrat, serif;
 
     @include on-tablet {
-      text-align: left;
+      grid-column: 1/4;
       font-size: 54px;
       line-height: 65px;
     }
 
     @include on-desktop {
+      grid-column: 1/6;
       font-size: 72px;
       line-height: 86px;
     }
   }
 
-  &__center {
+  &__button {
     grid-column: 1/-1;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-
-    @include on-tablet {
-      grid-column: 1/4;
-      gap: 38px;
-    }
-
-    @include on-desktop {
-      grid-column: 1/5;
-      gap: 89px;
-      margin-right: 30px;
-      position: relative;
-
-      &::after {
-        display: block;
-        position: absolute;
-        content: '';
-        width: 1px;
-        height: 70px;
-        background-color: $menu-color;
-        bottom: -100px;
-        left: 7px;
-      }
-    }
-  }
-
-  &__box {
     border: 1px solid $menu-color;
     display: flex;
     width: 280px;
     height: 50px;
-    justify-content: space-between;
+    margin-top: 20px;
+    justify-self: center;
+    text-decoration: none;
 
     @include hover(transform, scale(1.1));
 
     @include on-tablet {
+      grid-column: 1/4;
       width: 270px;
       height: 70px;
+      justify-self: start;
+      margin-top: 38px;
     }
 
     @include on-desktop {
-      align-self: end;
+      grid-column: 1/6;
+      justify-self: end;
+      margin-top: 89px;
     }
   }
 
-  &__tickets {
+  &__tickets{
+    text-align: center;
+    padding-block: 14px;
     width: 230px;
-    line-height: 16px;
-    color: rgba(15, 14, 8, 1);
     text-transform: uppercase;
-    font-family: 'IBM Plex Sans', serif;
-    font-variation-settings: 'wdth' 100;
-    cursor: pointer;
-
-    @include hover(transform, scale(1.2));
-
-    @include on-tablet {
-      width: 220px;
-      height: 70px;
-    }
-  }
-
-  &__tickets-link {
-    text-decoration: none;
     color: $main-dark;
-    width: 100%;
-    height: 100%;
 
-    @include centered-flex;
+    @include on-tablet{
+      width: 200px;
+      padding-block: 24px;
+    }
 
     &:hover {
       color: $menu-color;
@@ -146,36 +114,36 @@
 
   &__arrow {
     width: 50px;
+    height: 50px;
     background-color: $menu-color;
+
+    @include on-tablet{
+      width: 70px;
+      height: 70px;
+    }
   }
 
-  &__arrow-link {
-    width: 100%;
-    height: 100%;
-
-    @include centered-flex;
-  }
-
-  &__background {
+  &__events{
+    display: none;
+    color: rgba(104, 116, 128, 1);
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 14px;
+    align-items: center;
+    gap: 20px;
     position: absolute;
-    background-image: url(/src/images/top-bar-bg.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 300px;
-    width: 100%;
-    z-index: -1;
+    top: 522px;
+    left: 0;
+    writing-mode:sideways-lr;
 
-    @include on-tablet {
-      height: 390px;
-      width: 48%;
-      right: 0;
-      top: 0;
+    @include on-desktop{
+      display: flex;
     }
+  }
 
-    @include on-desktop {
-      height: 655px;
-      width: 58%;
-    }
+  &__events-line{
+    width: 1px;
+    height: 70px;
+    background-color: rgba(26, 90, 76, 1);
   }
 }
