--- a/src/styles/icon.scss
+++ b/src/styles/icon.scss
@@ -1,4 +1,6 @@
 .icon {
+  background-repeat: no-repeat;
+  background-position: center;
   display: block;
   width: 24px;
   height: 24px;
@@ -8,16 +10,6 @@
   &--header-logo {
     height: 61px;
     width: 55px;
-
-    // @include on-tablet {
-    //   width: 220px;
-    //   height: 72px;
-    // }
-
-    // @include on-desktop {
-    //   width: 170px;
-    //   height: 72px;
-    // }
   }
 
   &--menu {
@@ -26,6 +18,14 @@
 
   &--close {
     background-image: url(/src/images/icon-close.svg);
+  }
+
+  &--arrow{
+    padding: 13px;
+
+    @include on-tablet{
+      padding: 23px;
+    }
   }
 
   &--facebook {
@@ -37,10 +37,8 @@
   }
 
   &--arrow-up {
-    display: block;
     position: absolute;
     background-image: url(/src/images/arrow-up-icon.svg);
-    background-position: center;
     width: 50px;
     height: 50px;
     right: 0;
