--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,9 +7,13 @@
 @import 'top-bar';
 @import 'nav';
 @import 'menu';
-@import 'list';
-@import 'section';
+@import 'galery';
 @import 'article';
 @import 'main';
 @import 'swiper';
 @import 'footer';
+@import 'title';
+@import 'schedule';
+@import 'container';
+@import 'events';
+@import 'subscription';
