--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -7,33 +7,31 @@
 
 @mixin padding-inline {
   padding-inline: 20px;
-  max-width: 280px;
-  margin-inline: auto;
 
   @include on-tablet {
     padding-inline: 39px;
-    max-width: 690px;
   }
 
   @include on-desktop {
     padding-inline: 55px;
-    max-width: 1170px;
   }
 }
 
 @mixin page-grid {
+  --columns: 2;
+
   display: grid;
-  grid-template-columns: repeat(2, 130px);
+  grid-template-columns: repeat(var(--columns), 1fr);
   column-gap: 20px;
 
   @include on-tablet {
-    grid-template-columns: repeat(6, 90px);
+    --columns: 6;
+    
     column-gap: 30px;
   }
 
   @include on-desktop {
-    grid-template-columns: repeat(12, 70px);
-    column-gap: 30px;
+    --columns: 12;
   }
 }
 
@@ -62,13 +60,7 @@
   }
 }
 
-@mixin footer-text {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 21px;
-}
-
-@mixin link-line {
+@mixin hover-line {
   position: relative;
 
   &::after {
